--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import './variables';
 @import './fonts';
 @import './mixins';
+@import './extend';
 @import './normalize';
 @import './general';
 @import './blocks/blocks-all';
