--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,10 +3,14 @@
 * ::before {
   margin: 0;
   padding: 0;
+  box-sizing: inherit;
+}
+
+html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
